--- a/styles/sass/partials/_landingPage.scss
+++ b/styles/sass/partials/_landingPage.scss
@@ -1,1 +1,15 @@
 @use "./shared/variables" as *;
+
+
+.landingPage {
+    ul {
+        display: flex;
+        width: 20%;
+        height: 200px;
+        justify-content: space-between;
+        li {
+            background-color: red;
+        }
+    }
+    
+}
