added correct/incorrect classes for user selection

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -7,3 +7,10 @@
 @use "./partials/endPage";
 @use "./partials/shared/mediaQueries";
 
+.correct {
+    background-color: green;
+}
+
+.incorrect {
+    background-color: red;
+}
