worked on hard mode functions

--- a/styles/sass/partials/_landingPage.scss
+++ b/styles/sass/partials/_landingPage.scss
@@ -9,6 +9,7 @@
         justify-content: space-between;
         li {
             background-color: red;
+            margin: 20px;
         }
     }
     
