--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -21,3 +21,21 @@
     background-color: pink;
 }
 
+.modeSelection{
+    label {
+        margin: 20px 0 20px 20px;
+    }
+}
+
+// input {
+//     visibility:hidden;
+// }
+
+// label {
+//     cursor: pointer;
+// }
+
+// input:checked + label {
+//     color: red;
+// }
+
