--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -27,15 +27,15 @@
     }
 }
 
-// input {
-//     visibility:hidden;
-// }
+input {
+    visibility:hidden;
+}
 
-// label {
-//     cursor: pointer;
-// }
+label {
+    cursor: pointer;
+}
 
-// input:checked + label {
-//     color: red;
-// }
+input:checked + label {
+    color: red;
+}
 
