--- a/styles/sass/partials/shared/_globalStyles.scss
+++ b/styles/sass/partials/shared/_globalStyles.scss
@@ -2,8 +2,23 @@
 
 .wrapper {
     max-width: 1400px;
-    height: auto;
+    //height: auto;
     width: 90%;
     margin: 0 auto;
 }
 
+section {
+    height: 100vh;
+}
+
+button {
+    border-radius: 25px;
+    background-color: transparent;
+    padding: 20px;
+    width: 40%;
+    border: 2px rgb(151, 151, 186) solid;
+}
+
+fieldset {
+    border: none;
+}
