--- a/styles/sass/partials/shared/_globalStyles.scss
+++ b/styles/sass/partials/shared/_globalStyles.scss
@@ -6,6 +6,11 @@
     width: 90%;
     margin: 0 auto;
 }
+
+label {
+    cursor: pointer;
+}
+
 body {
     background-image: url("../assets/background-gbafd6026a_1280.png");
     background-repeat: no-repeat;
