--- a/styles/sass/partials/shared/_variables.scss
+++ b/styles/sass/partials/shared/_variables.scss
@@ -1,1 +1,9 @@
 
+
+ $lightOrange: #FFEADB;
+ $medOrange: #FFD2B5;
+ $teal: #679B9B;
+ $darkTeal: #637373;
+ $darkOrange: #FF9A76;
+ $darkBrown:#503f39;
+ $lightTeal: #9BC5C5;
