--- a/styles/sass/partials/_easyMode.scss
+++ b/styles/sass/partials/_easyMode.scss
@@ -3,9 +3,85 @@
 
 .correct {
     background-color: green;
-}
-
-
-.incorrect {
+  }
+  
+  .incorrect {
     background-color: red;
-}
+  }
+  .easyGame {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+  
+    h2.easyGameTitle {
+      margin: 0;
+    }
+  }
+  
+  .buttonContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 20px;
+    .easySubmit {
+      background-color: $darkOrange;
+      margin-top: 15px;
+      &:hover,
+      &:focus {
+        background-color:#FFB395;
+        color: white;
+    } 
+  }
+    
+    .next {
+      background-color: $teal;
+      &:hover,
+      &:focus {
+        background-color: $lightTeal;
+        color: white;
+      }
+    }
+    .next, .easySubmit {
+      width: 300px;
+      border-radius: 25px;
+      padding: 20px;
+      border: none;
+      transition: 0.5 ease; 
+    }
+  
+  }
+  
+  .poemTitleContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    gap: 7px;
+  
+    input {
+      visibility: hidden;
+    }
+    .easyOption {
+      padding: 40px;
+      gap: 20px;
+      background-color: $medOrange;
+      border-radius: 25px;
+      width: 50%;
+      transition: 0.5s ease;
+      &:hover,
+      &:focus {
+        //outline: 2px solid $darkOrange;
+        //transform: scale(1.1);
+        box-shadow: 0px 10px 13px -7px $darkTeal,
+          5px 5px 15px 5px rgba(0, 0, 0, 0);
+      }
+    }
+  }
+  
+  input:checked + label {
+    box-shadow: 0px 10px 13px -7px $darkTeal, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  }
