--- a/styles/sass/partials/_landingPage.scss
+++ b/styles/sass/partials/_landingPage.scss
@@ -1,27 +1,17 @@
 @use "./shared/variables" as *;
 
-
 .landingPage {
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  .imgContainer {
-    width: 30%;
-    position: relative;
-
-    img {
-      object-fit: contain;
-      width: 25%;
-      position: absolute;
-      left: 350px;
-      top: -160px;
-      // top: 200px;
-      // transform: scaleX(-1);
-    }
-  }
   .modeSelection {
-    // width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-evenly;
+    align-items: center;
+    height: 100%;
+
     fieldset {
       display: flex;
       flex-direction: column;
@@ -31,29 +21,33 @@
       legend {
         text-align: center;
       }
-      .start {
-        border-radius: 25px;
-        background-color: transparent;
-        padding: 20px;
-        width: 40%;
-        border: 2px rgb(210, 129, 107) solid;
-    }
-    
+     
+
       .modes {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: row;
+        margin: 60px 0px;
+
+        .easyBox {
+          background: $teal;
+        }
+
+        .hardBox {
+          background: $lightTeal;
+        }
 
         .modeInputs {
           visibility: hidden;
         }
         label {
-          padding: 200px 150px;
-          background-color: rgb(255,210,181);
+          padding: 150px 100px;
+          background-color: rgb(255, 210, 181);
           border-radius: 50px;
           transition: 0.5s ease;
-          &:hover, &:focus{
+          &:hover,
+          &:focus {
             transform: scale(1.1);
           }
         }
