--- a/styles/sass/partials/shared/_globalStyles.scss
+++ b/styles/sass/partials/shared/_globalStyles.scss
@@ -7,21 +7,26 @@ body {
     height: 100vh;
     margin: 0;
     section {
-        height: 75vh;
+        height: 70vh;
     }
 }
 
 header {
-    height: 25vh;
+    height: 20vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 30px;
     h1 {
         color: $veryDarkTeal;
         font-size: 10rem;
-        // text-align: center;
-        // margin: 10rem;
-    }
+        text-align: center;
+        margin-bottom: 20px;
+
+    } 
+    .logo {
+            width: 6%;
+        }
 }
 
 .wrapper {
@@ -61,7 +66,7 @@ button {
     }
 }
 
-.nextButton, .finishButton {
+.nextButton, .finishButton, .startButton {
     border-radius: 25px;
     border: none;
     background-color: $teal;
@@ -75,8 +80,18 @@ button {
 }
 
 footer {
-    background-color: white;
-    bottom: 0;
+    background-color: transparent;
+    width: 100%;
+    height: 3vh;
+    padding-top: 3px;
+    margin-top: 65px;
+
+    p{
+        font-size: 2.0rem;
+        margin: 0px;
+        text-align: right;
+        padding-right: 10px;
+    }
 }
 
 .stackTop {
