--- a/styles/styles.css
+++ b/styles/styles.css
@@ -229,11 +229,11 @@ body {
   margin: 0;
 }
 body section {
-  height: 75vh;
+  height: 70vh;
 }
 
 header {
-  height: 25vh;
+  height: 20vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -243,10 +243,16 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-top: 30px;
 }
 header h1 {
   color: #2d3a3a;
   font-size: 10rem;
+  text-align: center;
+  margin-bottom: 20px;
+}
+header .logo {
+  width: 6%;
 }
 
 .wrapper {
@@ -289,7 +295,7 @@ button {
   background-color: gray;
 }
 
-.nextButton, .finishButton {
+.nextButton, .finishButton, .startButton {
   border-radius: 25px;
   border: none;
   background-color: #679b9b;
@@ -298,14 +304,23 @@ button {
   transition: 0.3s;
   min-width: 300px;
 }
-.nextButton:hover, .nextButton:focus, .finishButton:hover, .finishButton:focus {
+.nextButton:hover, .nextButton:focus, .finishButton:hover, .finishButton:focus, .startButton:hover, .startButton:focus {
   background-color: #9bc5c5;
   color: white;
 }
 
 footer {
-  background-color: white;
-  bottom: 0;
+  background-color: transparent;
+  width: 100%;
+  height: 3vh;
+  padding-top: 3px;
+  margin-top: 65px;
+}
+footer p {
+  font-size: 2rem;
+  margin: 0px;
+  text-align: right;
+  padding-right: 10px;
 }
 
 .stackTop {
@@ -386,17 +401,21 @@ button {
       -ms-flex-align: center;
           align-items: center;
 }
-.landingPage .imgContainer {
-  width: 30%;
-  position: relative;
-}
-.landingPage .imgContainer img {
-  -o-object-fit: contain;
-     object-fit: contain;
-  width: 25%;
-  position: absolute;
-  left: 350px;
-  top: -160px;
+.landingPage .modeSelection {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
 }
 .landingPage .modeSelection fieldset {
   display: -webkit-box;
@@ -414,13 +433,6 @@ button {
 .landingPage .modeSelection fieldset legend {
   text-align: center;
 }
-.landingPage .modeSelection fieldset .start {
-  border-radius: 25px;
-  background-color: transparent;
-  padding: 20px;
-  width: 40%;
-  border: 2px rgb(210, 129, 107) solid;
-}
 .landingPage .modeSelection fieldset .modes {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -435,12 +447,19 @@ button {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  margin: 60px 0px;
+}
+.landingPage .modeSelection fieldset .modes .easyBox {
+  background: #679b9b;
+}
+.landingPage .modeSelection fieldset .modes .hardBox {
+  background: #9bc5c5;
 }
 .landingPage .modeSelection fieldset .modes .modeInputs {
   visibility: hidden;
 }
 .landingPage .modeSelection fieldset .modes label {
-  padding: 200px 150px;
+  padding: 150px 100px;
   background-color: rgb(255, 210, 181);
   border-radius: 50px;
   -webkit-transition: 0.5s ease;
