--- a/styles/sass/partials/_easyMode.scss
+++ b/styles/sass/partials/_easyMode.scss
@@ -1,19 +1,26 @@
 @use "./shared/variables" as *;
 
-// .correct {
-//     background-color: green;
-//   }
-  
-//   .incorrect {
-//     background-color: red;
-//   }
 .easyGame {
 display: flex;
 flex-direction: column;
 text-align: center;
 justify-content: center;
 
-    
+  input:checked + label {
+    outline: 5px solid $lightTeal;
+    box-shadow: 0px 10px 13px -7px $darkTeal, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  }
+  input:disabled + label {
+    color: $lightGray;
+    pointer-events: none;
+    outline: none;
+  }
+  .easySubmit {
+    background-color: $medOrange;
+    &:disabled {
+      background-color: $lightGray;
+    }
+  }
 }
   
 .poemTitleContainer {
@@ -37,8 +44,6 @@ justify-content: center;
       width: 65%;
       transition: 0.5s ease;
       &:hover, &:focus {
-        //outline: 2px solid $darkOrange;
-        //transform: scale(1.1);
         box-shadow: 0px 10px 13px -7px $darkTeal,
           5px 5px 15px 5px rgba(0, 0, 0, 0);
       }
@@ -61,10 +66,17 @@ justify-content: center;
         margin-top: 25px;
         width: 65%;
     }
-
   }
   
-  input:checked + label {
-    outline: 5px solid $lightTeal;
-    box-shadow: 0px 10px 13px -7px $darkTeal, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  .poemTitleContainer {
+    .correct {
+        border: 5px solid #89c2a0;
+      // background-color: #89c2a0;
+    }
+    .incorrect {
+      border: 2px solid white;
+      border-style: inset;
+      // border: 5px solid #ff8676;
+      background-color: #ff8676;
+    }
   }
