--- a/styles/sass/partials/_hardMode.scss
+++ b/styles/sass/partials/_hardMode.scss
@@ -18,17 +18,18 @@
     display: flex;
     width: 80%;
     gap: 25px;
+    max-height: 75px;
 
     input {
         all: unset;
+        border-style: hidden;
         background-color: white;
         border-radius: 50px;
         width: 80%;
         padding-left: 25px;
-        // height: 75px;
-        // margin: 25px;
         &:disabled {
-            background-color: gray;
+            color: $lightGray;
+            pointer-events: none;
         }
         &:hover, &:focus {
             outline: 5px solid $medOrange;
@@ -36,6 +37,7 @@
         &::placeholder {
             color: $darkOrange;
         }
+       
     }
 }
 
