--- a/styles/sass/partials/_easyMode.scss
+++ b/styles/sass/partials/_easyMode.scss
@@ -15,12 +15,6 @@ justify-content: center;
     pointer-events: none;
     outline: none;
   }
-  .easySubmit {
-    background-color: $medOrange;
-    &:disabled {
-      background-color: $lightGray;
-    }
-  }
 }
   
 .poemTitleContainer {
@@ -42,11 +36,18 @@ justify-content: center;
       background-color: white;
       border-radius: 25px;
       width: 65%;
-      transition: 0.5s ease;
+      transition: 0.3s ease;
       &:hover, &:focus {
         box-shadow: 0px 10px 13px -7px $darkTeal,
           5px 5px 15px 5px rgba(0, 0, 0, 0);
       }
+    }
+
+    .correct {
+      border: 5px solid $correct;
+    }
+    .incorrect {
+      border: 5px solid $incorrect;
     }
 
     .resultContainer {
@@ -65,18 +66,5 @@ justify-content: center;
         gap: 20px;
         margin-top: 25px;
         width: 65%;
-    }
-  }
-  
-  .poemTitleContainer {
-    .correct {
-        border: 5px solid #89c2a0;
-      // background-color: #89c2a0;
-    }
-    .incorrect {
-      border: 2px solid white;
-      border-style: inset;
-      // border: 5px solid #ff8676;
-      background-color: #ff8676;
     }
   }
