--- a/styles/sass/partials/_hardMode.scss
+++ b/styles/sass/partials/_hardMode.scss
@@ -1,4 +1,5 @@
 @use "./shared/variables" as *;
+@use "./mixins" as *;
 
 .hardGame {
     display: flex;
@@ -11,6 +12,10 @@
     }
     h3 {
         font-size: 5rem;
+
+        @include tablet {
+            text-align: center;
+        }
     }
 }
 
@@ -18,7 +23,15 @@
     display: flex;
     width: 80%;
     gap: 25px;
-    max-height: 75px;
+ 
+
+    @include tablet {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+    }
 
     input {
         all: unset;
@@ -38,6 +51,9 @@
             color: $darkOrange;
         }
        
+        @include tablet {
+        height: 50%;
+        }
     }
 }
 
@@ -46,8 +62,23 @@
     justify-content: space-between;
     width: 80%;
     margin: 25px 0;
+
+    @include tablet {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        button.nextButton.nextHard {
+            width: 20%;
+        }
+    }
     
     .currentScoreHard {
         align-self: center;
+
+        @include tablet {
+            margin-top: 20px;
+        }
     }
 }
