--- a/styles/sass/partials/shared/_globalStyles.scss
+++ b/styles/sass/partials/shared/_globalStyles.scss
@@ -18,15 +18,12 @@ header {
     align-items: center;
     padding-top: 30px;
     h1 {
-        color: $veryDarkTeal;
+        color: $darkTeal;
         font-size: 10rem;
         text-align: center;
         margin-bottom: 20px;
-
     } 
-    .logo {
-            width: 6%;
-        }
+  
 }
 
 .wrapper {
