--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -7,6 +7,7 @@
 @use "./partials/hardMode";
 @use "./partials/endPage";
 @use "./partials/shared/mediaQueries";
+@use "./partials/mixins";
 
 .invisible {
     display: none;
