--- a/styles/sass/partials/shared/_typographies.scss
+++ b/styles/sass/partials/shared/_typographies.scss
@@ -6,18 +6,25 @@ html {
 
 body {
     font-family: 'Bad Script', cursive, sans-serif;
-    font-size: 3.0rem;
+    font-size: clamp(2.2rem, 2vw, 3.0rem);
     color: $veryDarkTeal;
 }
 
-h1, h2 {
-    font-size: 6.0rem;
-    // margin-top: 150px;
+h1 {
+    color: $darkTeal;
+    font-size: clamp(5rem, 5vw, 10rem);
+    text-align: center;
+    margin-bottom: 20px;
+} 
+
+h2 {
+    font-size: clamp(3rem, 3vw, 6rem);
+    margin-top: 100px;
     font-weight: bold;
 }
 
 h3 {
-    font-size: 5.0rem;
+    font-size: clamp(2.5rem, 2.5vw, 5.0rem);
 }
 
 button {
