--- a/styles/styles.css
+++ b/styles/styles.css
@@ -245,12 +245,6 @@ header {
           align-items: center;
   padding-top: 30px;
 }
-header h1 {
-  color: #637373;
-  font-size: 10rem;
-  text-align: center;
-  margin-bottom: 20px;
-}
 
 .wrapper {
   max-width: 1400px;
@@ -315,7 +309,7 @@ footer {
   margin-top: 65px;
 }
 footer p {
-  font-size: 2rem;
+  font-size: 1.6rem;
   margin: 0px;
   text-align: right;
   padding-right: 10px;
@@ -370,17 +364,25 @@ html {
 
 body {
   font-family: "Bad Script", cursive, sans-serif;
-  font-size: 3rem;
+  font-size: clamp(2.2rem, 2vw, 3rem);
   color: #2d3a3a;
 }
 
-h1, h2 {
-  font-size: 6rem;
+h1 {
+  color: #637373;
+  font-size: clamp(5rem, 5vw, 10rem);
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+h2 {
+  font-size: clamp(3rem, 3vw, 6rem);
+  margin-top: 100px;
   font-weight: bold;
 }
 
 h3 {
-  font-size: 5rem;
+  font-size: clamp(2.5rem, 2.5vw, 5rem);
 }
 
 button {
