--- a/styles/sass/partials/_easyMode.scss
+++ b/styles/sass/partials/_easyMode.scss
@@ -74,7 +74,14 @@ justify-content: center;
         justify-content: center;
         text-align: center;
         gap: 20px;
-        margin-top: 25px;
         width: 65%;
+        margin-top: 25px;
+        min-width: 0;
+
+        @include tablet {
+            width: 100%;
+            display: flex;
+            align-items: center;
+        }
     }
   }
