--- a/styles/sass/partials/_hardMode.scss
+++ b/styles/sass/partials/_hardMode.scss
@@ -24,13 +24,20 @@
     width: 80%;
     gap: 25px;
  
-
     @include tablet {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         
+    }
+
+    .correct {
+        outline: 5px solid $correct;
+    }
+    .incorrect {
+        outline: 5px solid $incorrect;
+        border: 1px solid white;
     }
 
     input {
@@ -79,18 +86,5 @@
         @include tablet {
             margin-top: 20px;
         }
-    }
-}
-
-
-.hardQuestion {
-    .correct {
-        border: 5px solid $correct;
-    }
-    .incorrect {
-        input[type="text"] {
-             border: 5px solid $incorrect;
-        }
-       
     }
 }
