--- a/styles/sass/partials/shared/_globalStyles.scss
+++ b/styles/sass/partials/shared/_globalStyles.scss
@@ -16,7 +16,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 30px;
+    padding: 30px 0;
 }
 
 .wrapper {
