--- a/styles/sass/partials/_easyMode.scss
+++ b/styles/sass/partials/_easyMode.scss
@@ -2,10 +2,10 @@
 @use "./mixins" as *;
 
 .easyGame {
-display: flex;
-flex-direction: column;
-text-align: center;
-justify-content: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
 
   input:checked + label {
     outline: 5px solid $lightTeal;
@@ -17,71 +17,79 @@ justify-content: center;
     outline: none;
   }
 }
-  
+
 .poemTitleContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    gap: 7px;
-    width: 100%;
-  
-    input {
-      visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  gap: 7px;
+  width: 100%;
+
+  input {
+    visibility: hidden;
+  }
+
+  .easyOption {
+    padding: 25px;
+    gap: 20px;
+    background-color: white;
+    border-radius: 25px;
+    width: 65%;
+    transition: 0.3s ease;
+    &:hover,
+    &:focus {
+      box-shadow: 0px 10px 13px -7px $darkTeal,
+        5px 5px 15px 5px rgba(0, 0, 0, 0);
     }
-
-    .easyOption {
-      padding: 25px;
-      gap: 20px;
-      background-color: white;
-      border-radius: 25px;
-      width: 65%;
-      transition: 0.3s ease;
-      &:hover, &:focus {
-        box-shadow: 0px 10px 13px -7px $darkTeal,
-          5px 5px 15px 5px rgba(0, 0, 0, 0);
-      }
-    }
-
-    .correct {
-      border: 5px solid $correct;
-    }
-    .incorrect {
-      border: 5px solid $incorrect;
-    }
-
-    .resultContainer {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 65%;
-
-      @include tablet {
-          display: flex;
-          flex-direction: column;
-
-          .currentScore {
-              margin-top: 20px;
-          }
-      }
-    }
-
-    .buttonContainer {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
-        text-align: center;
-        gap: 20px;
-        width: 65%;
-        margin-top: 25px;
-        min-width: 0;
-
-        @include tablet {
-            width: 100%;
-            display: flex;
-            align-items: center;
-        }
+    @include tablet {
+      min-width: 250px;
     }
   }
+
+  .correct {
+    border: 5px solid $correct;
+  }
+  .incorrect {
+    border: 5px solid $incorrect;
+  }
+
+  .resultContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 65%;
+
+    @include tablet {
+      display: flex;
+      flex-direction: column;
+
+      .currentScore {
+        margin-top: 20px;
+      }
+    }
+  }
+
+  .buttonContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    text-align: center;
+    gap: 20px;
+    width: 65%;
+    margin-top: 25px;
+    min-width: 0;
+
+    @include tablet {
+      width: 100%;
+      display: flex;
+      align-items: center;
+    }
+  }
+}
+
+
+
+//   add min width of 250px on labels
