--- a/styles/sass/partials/_endPage.scss
+++ b/styles/sass/partials/_endPage.scss
@@ -6,7 +6,8 @@
     justify-content: center;
     align-items: center;
     .finalContent {
-       
+       display: flex;
+       justify-content: center;
         top: 50vh;
         background-color: white;
         border-radius: 50px;
