--- a/styles/sass/partials/_hardMode.scss
+++ b/styles/sass/partials/_hardMode.scss
@@ -10,7 +10,7 @@
     .titleContainer {
         width: 80%;
     }
-    h3 {
+    h2 {
         font-size: 5rem;
 
         @include tablet {
@@ -53,6 +53,7 @@
        
         @include tablet {
         height: 50%;
+        min-width: 250px;
         }
     }
 }
