--- a/styles/sass/partials/_landingPage.scss
+++ b/styles/sass/partials/_landingPage.scss
@@ -1,4 +1,5 @@
 @use "./shared/variables" as *;
+@use "./mixins" as *;
 
 .landingPage {
   display: flex;
@@ -8,7 +9,7 @@
   .modeSelection {
     display: flex;
     flex-direction: column;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
     align-items: center;
     height: 100%;
 
@@ -21,7 +22,6 @@
       legend {
         text-align: center;
       }
-     
 
       .modes {
         display: flex;
@@ -30,12 +30,21 @@
         flex-direction: row;
         margin: 60px 0px;
 
+        input:checked + label {
+          outline: 2px solid white;
+        }
+
+        @include mobile {
+          display: flex;
+          flex-direction: column;
+        }
+
         .easyBox {
-          background: $teal;
+          background: $lightTeal;
         }
 
         .hardBox {
-          background: $lightTeal;
+          background: #8aabad;
         }
 
         .modeInputs {
@@ -50,8 +59,55 @@
           &:focus {
             transform: scale(1.1);
           }
+          @include mobile {
+            padding: 50px 100px;
+          }
         }
       }
+    }
+  }
+
+  .instructions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @include mobile {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+    }
+  }
+  .instructionsEasy,
+  .instructionsHard {
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    border-radius: 50px;
+    width: 31%;
+    margin: -30px 0px 20px 10px;
+    // margin-bottom: 20px;
+    //margin-left: 10px;
+    //margin-top: -30px;
+    min-width: 250px;
+
+    @include mobile {
+      width: 60%;
+    }
+
+    p {
+      width: 95%;
+      margin: 5px;
+      padding: 10px;
+      span {
+        font-weight: bold;
+      }
+      font-size: 1.4rem;
+    }
+
+    h3 {
+      font-size: 2rem;
+      //font-size: clamp(1.0rem, 2vw, 3rem);
     }
   }
 }
