--- a/styles/sass/partials/shared/_globalStyles.scss
+++ b/styles/sass/partials/shared/_globalStyles.scss
@@ -1,4 +1,5 @@
 @use "./variables" as *;
+@use "../mixins" as *;
 
 body {
     background-image: url("../assets/background.png");
@@ -77,11 +78,16 @@ footer {
     padding-top: 3px;
     margin-top: 65px;
 
+   
     p {
         font-size: 1.6rem;
         margin: 0px;
         text-align: right;
         padding-right: 10px;
+        
+        @include tablet {
+        text-align: center;
+    }
     }
 }
 
