--- a/styles/sass/partials/shared/_variables.scss
+++ b/styles/sass/partials/shared/_variables.scss
@@ -4,8 +4,8 @@ $teal: #679b9b;
 $darkTeal: #637373;
 $darkOrange: #ff9a76;
 $darkBrown:#503f39;
-$lightTeal: #9bc5c5;
-$veryDarkTeal: #2d3a3a;
+$lightTeal: #a5b7b8;
+$veryDarkTeal: #1b2424;
 $lightGray: #d3d8d8;
 $correct: #89c2a0;
 $incorrect: #ff8676;
